fix: Jackson XML WildFly 10 compatibility and Woodstox StAX fixes
- Add explicit Woodstox WstxInputFactory/WstxOutputFactory configuration
to XmlMapper in 10+ *JacksonXMLHelper.java files to fix
Stax2WriterAdapter UnsupportedOperationException on WildFly 10
- Add woodstox-core 6.5.1 dependency to 9+ pom.xml files
- Add null check for persistFile in MAPStackConfigurationManagement
to fix NPE during Jackson deserialization
- Add log4j-api and javax.mail.api dependencies to module.xml
- Update M3UA error management state serialization for Jackson
- Various Jackson XML serialization fixes across TCAP, CAP, INAP,
ISUP, SCCP, MAP, OAM modules